# RayTracer12

./: CMakeLists.txt  README.md  main.cpp
hw/rand/: norotate.ppm
src/letters/: Letter.h  LetterFactory.h  LetterSegment.h
src/math/: Vec3.h
src/optimisations/: AABB.h  AABBTree.h  Bucket.h  BucketRenderer.h  ThreadPool.h
src/sampling/: Camera.h  IntersectionData.h  Lighting.h  Material.h  Ray.h  Raygen.h  Shaders.h  Tracer.h  Triangle.h
src/scene/: Scene.h
src/utils/: TypeDefs.h
